objects/NADA_Attendees__c.object
<CustomObject>
    <description>Child object to Lead that identifies specific attendee attributes from NADA visit</description>
    <fields>
        <fullName>Contact_Dealership__c</fullName>
        <formula>Contact__r.Account.Name</formula>
        <label>Contact Dealership</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Contact must be specified!</errorMessage>
            <filterItems>
                <field>Contact.No_Longer_There__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Lead_Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Time_of_Scan__c</fullName>
        <label>Date/Time of Scan</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Demo_Date__c</fullName>
        <label>Demo Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Demo_Location__c</fullName>
        <label>Demo Location</label>
        <picklist>
            <picklistValues>
                <fullName>Main Booth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATD Booth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ford</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Demographic_10_Name__c</fullName>
        <label>Demographic 10 Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Demographic_10_Value__c</fullName>
        <label>Demographic 10 Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Demographic_11_Name__c</fullName>
        <label>Demographic 11 Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Demographic_11_Value__c</fullName>
        <label>Demographic 11 Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Demographic_12_Name__c</fullName>
        <label>Demographic 12 Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Demographic_12_Value__c</fullName>
        <label>Demographic 12 Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Lead_Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NADA_Presentation_Area_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NADA Presentation Area Lookup</label>
        <referenceTo>NADA_Presentation_Area__c</referenceTo>
        <relationshipLabel>NADA Attendees</relationshipLabel>
        <relationshipName>NADA_Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NADA_Swipe_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NADA Swipe Lookup</label>
        <referenceTo>NADA_Swipe__c</referenceTo>
        <relationshipLabel>NADA Attendees</relationshipLabel>
        <relationshipName>NADA_Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Presentation_Area__c</fullName>
        <label>Presentation Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <inlineHelpText>Lead temperature set at time of badge scan.</inlineHelpText>
        <label>Priority</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Questions_and_Answers__c</fullName>
        <label>Questions and Answers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Scanned_Address__c</fullName>
        <description>NADA_Swipe_Lookup__r.Street_Address__c + IF( ISBLANK( NADA_Swipe_Lookup__r.Address2__c ) , &quot; &quot;, BR() + NADA_Swipe_Lookup__r.Address2__c )</description>
        <label>Scanned Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scanned_City__c</fullName>
        <label>Scanned City</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scanned_Company2__c</fullName>
        <label>Scanned Company2</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scanned_Company__c</fullName>
        <label>Scanned Company</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scanned_Country__c</fullName>
        <label>Scanned Country</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scanned_Email__c</fullName>
        <label>Scanned Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Scanned_Fax__c</fullName>
        <label>Scanned Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Scanned_First_Name__c</fullName>
        <label>Scanned First Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scanned_Last_Name__c</fullName>
        <label>Scanned Last Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scanned_Manufacturers__c</fullName>
        <label>Scanned Manufacturers</label>
        <picklist>
            <picklistValues>
                <fullName>Acura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aston Martin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bentley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadillac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chevrolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chrysler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crane Carrier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dodge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ferrari</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fisker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freightliner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hino</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyundai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infiniti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Isuzu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jaguar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jeep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kenworth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lamborghini</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Land-Rover</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Scanned_Notes__c</fullName>
        <label>Scanned Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Scanned_Phone__c</fullName>
        <label>Scanned Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Scanned_Postal_Code__c</fullName>
        <label>Scanned Postal Code</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scanned_State__c</fullName>
        <label>Scanned State</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scanned_Title__c</fullName>
        <label>Scanned Title</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>NADA Attendee</label>
    <nameField>
        <displayFormat>NA-{YYYY}-{0}</displayFormat>
        <label>NADA Attendees ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NADA Attendees</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>